app/assets/stylesheets/components/_photo-accueil.scss
.background-accueil {
  height: calc(100vh - 62px);
  background-size: cover;
}

.flex-text {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}

#title-banner {
  font-family: 'Lobster', cursive;
  font-size: 3em;
}

.text-banner {
  padding: 15px;
  background-color: white;
  display: inline-block;
  opacity: 0.6;
  border-radius: 5px;
  box-shadow: 0 0 15px rgba(0,0,0,0.2);
  width: 320px;
  max-height: 320px;
  margin: 30px auto;
  text-align: center;
  line-height: 1.205;
  position: absolute; /* postulat de départ */
  top: 250px; left: 50%; /* à 50%/50% du parent référent */
  transform: translate(-50%, -50%); /* décalage de 50% de sa propre taille */
  p {
    color: $blue;
    position: relative;
    font-size: 1em;
  }
  p:after {
    content: "";
    position: absolute;
    bottom: 0; right: 0px; left: 0px;
    height: 2px;
    background-color: $blue;
    width: 100px;
    top: +100%; left: 50%;
    transform: translate(-50%, -50%);
  }
  p:before {
    content: "";
    position: absolute;
    bottom: 0; right: 0px; left: 0px;
    height: 2px;
    background-color: $blue;
    width: 100px;
    top: 0%; left: 50%;
    transform: translate(-50%, -50%);
  }
  h4 {
    color: $blue;
    font-size: 0.9em;
  }
}

.arrow-icon {
  color: $white;
  font-size: 2.5em;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 70vh;
}

